# Agents

./: .dockerignore  .gitignore  docker-compose.yml  nixpacks.toml  railway.toml
backend/: .env.railway.template  .env.test  Dockerfile  Procfile  alembic.ini  nixpacks.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1001883849f1_inventory_core_product_variants_stock_.py  5507c62d344f_persistent_agent_sessions_unique_per_.py  55b56248dd17_initial_tenants_and_users_tables.py  947bcf42abfd_add_all_domain_tables.py  a1b2c3d4e5f6_remove_force_rls.py  add_product_images.py  add_product_images_table.py  add_temp_images_001_add_temp_images.py  b2c3d4e5f6a7_facebook_sync_tables.py  c1d2e3f4a5b6_admin_tables_business_profile_orders.py  d1e2f3a4b5c6_product_discounts_table.py  e2f3a4b5c6d7_shipping_method_and_product_weight.py  eac08e40c76f_report_engine_add_status_and_template_.py  f1a2b3c4d5e6_brand_dna_table.py  g2b3c4d5e6f7_merge_shipping_and_brand_dna.py  h3c4d5e6f7a8_r2_storage_migration.py
backend/app/: main.py  worker.py
backend/app/agents/: base.py  fake_llm.py  prompts.py  tools.py
backend/app/core/: config.py  deps.py  security.py
backend/tests/: conftest.py  test_admin_agent.py  test_agent_chat.py  test_auth.py  test_calendar.py  test_facebook_sync.py  test_foundation.py  test_inventory.py  test_marketing_agent.py  test_notifications.py  test_product_tools.py  test_report_engine.py  test_reports_admin.py  test_reports_marketer_pm.py  test_reports_strategist.py  test_schema_rls.py  test_task_queue.py  test_upload.py
(+199 files in other folders)
